# c-ACA

./: homework1  homework1.cpp
aca-main/: README.md
aca-main/math/: CMakeLists.txt  main.cpp
aca-main/math/src/: CMakeLists.txt
aca-main/math/src/math/: math.cpp
aca-main/math/src/math/include/math/: math.h
aca-main/math/tests/: CMakeLists.txt  my_lib_test.cpp
homework1/: homework1.cpp
